<resources>
    <string name="app_name">Investaverse</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="title_activity_social_page">SocialPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="phone">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="explore_fragment">Explore Fragment</string>
    <string name="portfolio_fragment">Portfolio Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="social_fragment">Social Fragment</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="social">Social</string>
    <string name="portfolio">Portfolio</string>
    <string name="profile">Profile</string>
    <string name="back">Yey, you\'re back!</string>
    <string name="text">Let us do it for you, while you also build your wealth and put your money to work, effortlessly.</string>
    <string name="dont">Don\'t have an account?</string>
    <string name="get">Let\'s Get Started!</string>
    <string name="text2">Empower your financial future with knowledge and investment, all in one place.</string>
    <string name="already">Already have an account?</string>
    <string name="log">Login</string>
    <string name="referral">Referral</string>
    <string name="payment">Payment Methods</string>
    <string name="security">Security</string>
    <string name="card">Gift Cards</string>
    <string name="gifts">My Gifts</string>
    <string name="help">Help and Support</string>
    <string name="share">Share the app</string>
    <string name="news">Trading News</string>
    <string name="title_activity_explore2">Explore2</string>
    <string name="log_out">Log out</string>
    <string name="_123456789">123456789</string>
    <string name="investaverse">investaverse</string>
    <string name="enter_the_otp_sent_to">Enter the otp sent to</string>
    <string name="didn_t_received_otp">Didn\'t received OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="homename">Name</string>
    <string name="calendar">Calendar</string>
    <string name="resources">Resources</string>

    <string-array name="crypto_name_text">
        <item>BTC</item>
        <item>ETY</item>
        <item>EVB</item>
        <item>TRC</item>
        <item>YTE</item>
        <item>WHT</item>
        <item>HYG</item>
    </string-array>

    <string-array name="last_price_text">
        <item>234.12</item>
        <item>763.23</item>
        <item>764.52</item>
        <item>643.34</item>
        <item>533.34</item>
        <item>223.32</item>
        <item>115.23</item>
    </string-array>


    <string-array name="changes_text">
        <item>+4.12</item>
        <item>+3.23</item>
        <item>+4.52</item>
        <item>+3.34</item>
        <item>+3.34</item>
        <item>+3.32</item>
        <item>+5.23</item>
    </string-array>
</resources>