<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home_bg"
        android:enabled="true"/>
    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/explore_bg"
        android:enabled="true"/>
    <item
        android:id="@+id/social"
        android:title="@string/social"
        android:icon="@drawable/post_bg"
        android:enabled="true"/>
    <item
        android:id="@+id/portfolio"
        android:title="@string/portfolio"
        android:icon="@drawable/portfolio_bg"
        android:enabled="true"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/user_bg"
        android:enabled="true"/>
</menu>